Kubernetes/nginx-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-stateful-set
  namespace: training
spec:
  replicas: 1
  selector:
    matchLabels:
      app-name: nginx
  serviceName: nginx-service
  template:
    metadata:
      namespace: training
      labels:
        app-name: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.2-alpine
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-volume
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: nginx-volume
        namespace: training
      spec:
        resources:
          requests:
            storage: 1G
        accessModes:
          - ReadWriteMany
