Kubernetes/updater-pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: training
  name: updater-pod
spec:
  containers:
    - name: updater
      image: landrzejewski/updater:v2
      #args:
      #  - '20'

      #env:
      #  - name: INTERVAL
      #    #value: '20'
      #    valueFrom:
      #      configMapKeyRef:
      #        name: updater-config-map
      #        key: INTERVAL

      volumeMounts:
        - name: config
          mountPath: /config
        - name: storage
          mountPath: /storage

  volumes:
    - name: config
      configMap:
        name: updater-config-map
    - name: storage
      hostPath:
        path: /storage
