Kubernetes/gfs-volume-service.yml
apiVersion: v1
kind: Endpoints
metadata:
  namespace: training
  name: gfs-service
subsets:
  - addresses:
      - ip: 192.168.1.20
    ports:
      - port: 49152
  - addresses:
      - ip: 192.168.1.21
    ports:
      - port: 49152
  - addresses:
      - ip: 192.168.1.22
    ports:
      - port: 49152
---
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: gfs-service
spec:
  type: ExternalName
  ports:
    - port: 49152
