Kubernetes/ingress-service-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: ingress-service
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  ports:
    - port: 80
      name: http
      targetPort: http
