Kubernetes/sqrt-service-node-port.yml
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: sqrt-service
spec:
  type: NodePort
  selector:
    app-name: sqrt
  ports:
    - port: 80
      nodePort: 30002
