Kubernetes/main-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: training
  name: main-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - pathType: Prefix
            path:
              /echo
            backend:
              service:
                name: echo-server-service
                port:
                  number: 80
